# simple-hash-db

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Deserializer.cpp  Deserializer.hpp  Serializer.cpp  Serializer.hpp  core.cpp  core.hpp
storage/: data.hpp  storage.cpp  storage.hpp
